// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Form item hidden noStyle should not work when hidden 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-form-item ant-form-item-hidden"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input"
              id="light"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form Form item hidden should work 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-form-item ant-form-item-hidden"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input"
              id="light"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form Form.Item should support data-*、aria-* and custom attribute 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-form-item"
  >
    <div
      aria-hidden="true"
      cccc="bbbb"
      class="ant-row ant-form-item-row"
      data-text="123"
    >
      <div
        class="ant-col ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            text
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form form should support disabled 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-form-item"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-col-4 ant-form-item-label"
      >
        <label
          class=""
          for="disabled"
          title="Form disabled"
        >
          Form disabled
        </label>
      </div>
      <div
        class="ant-col ant-col-14 ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <label
              class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled ant-checkbox-wrapper-in-form-item"
            >
              <span
                class="ant-checkbox ant-checkbox-disabled"
              >
                <input
                  class="ant-checkbox-input"
                  disabled=""
                  id="disabled"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                disabled
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-col-4 ant-form-item-label"
      >
        <label
          class=""
          title="Radio"
        >
          Radio
        </label>
      </div>
      <div
        class="ant-col ant-col-14 ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-radio-group ant-radio-group-outline"
            >
              <label
                class="ant-radio-wrapper ant-radio-wrapper-disabled ant-radio-wrapper-in-form-item"
              >
                <span
                  class="ant-radio ant-radio-disabled"
                >
                  <input
                    class="ant-radio-input"
                    disabled=""
                    type="radio"
                    value="apple"
                  />
                  <span
                    class="ant-radio-inner"
                  />
                </span>
                <span>
                  Apple
                </span>
              </label>
              <label
                class="ant-radio-wrapper ant-radio-wrapper-disabled ant-radio-wrapper-in-form-item"
              >
                <span
                  class="ant-radio ant-radio-disabled"
                >
                  <input
                    class="ant-radio-input"
                    disabled=""
                    type="radio"
                    value="pear"
                  />
                  <span
                    class="ant-radio-inner"
                  />
                </span>
                <span>
                  Pear
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-col-4 ant-form-item-label"
      >
        <label
          class=""
          title="Input"
        >
          Input
        </label>
      </div>
      <div
        class="ant-col ant-col-14 ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input ant-input-disabled"
              disabled=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-col-4 ant-form-item-label"
      >
        <label
          class=""
          title="Select"
        >
          Select
        </label>
      </div>
      <div
        class="ant-col ant-col-14 ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-select-in-form-item ant-select-single ant-select-show-arrow ant-select-disabled"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    disabled=""
                    id="rc_select_TEST_OR_SSR"
                    readonly=""
                    role="combobox"
                    style="opacity: 0;"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  aria-label="down"
                  class="anticon anticon-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-col-4 ant-form-item-label"
      >
        <label
          class=""
          title="TreeSelect"
        >
          TreeSelect
        </label>
      </div>
      <div
        class="ant-col ant-col-14 ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-tree-select ant-select-in-form-item ant-select-single ant-select-show-arrow ant-select-disabled"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    disabled=""
                    id="rc_select_TEST_OR_SSR"
                    readonly=""
                    role="combobox"
                    style="opacity: 0;"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  aria-label="down"
                  class="anticon anticon-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-col-4 ant-form-item-label"
      >
        <label
          class=""
          title="Cascader"
        >
          Cascader
        </label>
      </div>
      <div
        class="ant-col ant-col-14 ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-cascader ant-select-in-form-item ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-disabled"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    disabled=""
                    id="rc_select_TEST_OR_SSR"
                    readonly=""
                    role="combobox"
                    style="opacity: 0;"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  aria-label="down"
                  class="anticon anticon-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-col-4 ant-form-item-label"
      >
        <label
          class=""
          title="DatePicker"
        >
          DatePicker
        </label>
      </div>
      <div
        class="ant-col ant-col-14 ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-picker ant-picker-disabled"
            >
              <div
                class="ant-picker-input"
              >
                <span
                  class="ant-picker-prefix"
                >
                  <svg
                    fill="currentColor"
                    height="20"
                    viewBox="0 0 24 24"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
                    />
                    <path
                      d="M6.75 16a.75.75 0 01.75-.75h1a.75.75 0 010 1.5h-1a.75.75 0 01-.75-.75z"
                    />
                    <path
                      d="M11.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
                    />
                    <path
                      d="M10.75 16a.75.75 0 01.75-.75h1a.75.75 0 010 1.5h-1a.75.75 0 01-.75-.75z"
                    />
                    <path
                      d="M15.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
                    />
                    <path
                      d="M8.5 2a.75.75 0 01.75.75V4h5.5V2.75a.75.75 0 011.5 0V4H18a3 3 0 013 3v11a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h1.75V2.75A.75.75 0 018.5 2zm6.25 3.5h-5.5v1.25a.75.75 0 01-1.5 0V5.5H6A1.5 1.5 0 004.5 7v1.25h15V7A1.5 1.5 0 0018 5.5h-1.75v1.25a.75.75 0 01-1.5 0V5.5zM4.5 9.75V18A1.5 1.5 0 006 19.5h12a1.5 1.5 0 001.5-1.5V9.75h-15z"
                    />
                  </svg>
                </span>
                <input
                  autocomplete="off"
                  disabled=""
                  placeholder="Select date"
                  readonly=""
                  size="12"
                  title=""
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-col-4 ant-form-item-label"
      >
        <label
          class=""
          title="RangePicker"
        >
          RangePicker
        </label>
      </div>
      <div
        class="ant-col ant-col-14 ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-picker ant-picker-range ant-picker-disabled"
            >
              <span
                class="ant-picker-prefix"
              >
                <svg
                  fill="currentColor"
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
                  />
                  <path
                    d="M6.75 16a.75.75 0 01.75-.75h1a.75.75 0 010 1.5h-1a.75.75 0 01-.75-.75z"
                  />
                  <path
                    d="M11.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
                  />
                  <path
                    d="M10.75 16a.75.75 0 01.75-.75h1a.75.75 0 010 1.5h-1a.75.75 0 01-.75-.75z"
                  />
                  <path
                    d="M15.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
                  />
                  <path
                    d="M8.5 2a.75.75 0 01.75.75V4h5.5V2.75a.75.75 0 011.5 0V4H18a3 3 0 013 3v11a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h1.75V2.75A.75.75 0 018.5 2zm6.25 3.5h-5.5v1.25a.75.75 0 01-1.5 0V5.5H6A1.5 1.5 0 004.5 7v1.25h15V7A1.5 1.5 0 0018 5.5h-1.75v1.25a.75.75 0 01-1.5 0V5.5zM4.5 9.75V18A1.5 1.5 0 006 19.5h12a1.5 1.5 0 001.5-1.5V9.75h-15z"
                  />
                </svg>
              </span>
              <div
                class="ant-picker-input ant-picker-input-active"
              >
                <input
                  autocomplete="off"
                  disabled=""
                  placeholder="Start date"
                  readonly=""
                  size="12"
                  value=""
                />
              </div>
              <div
                class="ant-picker-range-separator"
              >
                <span
                  aria-label="to"
                  class="ant-picker-separator"
                >
                  <svg
                    fill="currentColor"
                    height="20"
                    viewBox="0 0 24 24"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16.53 7.47a.75.75 0 10-1.06 1.06l2.72 2.72H4a.75.75 0 000 1.5h16a.75.75 0 00.53-1.28l-4-4z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-picker-input"
              >
                <input
                  autocomplete="off"
                  disabled=""
                  placeholder="End date"
                  readonly=""
                  size="12"
                  value=""
                />
              </div>
              <div
                class="ant-picker-active-bar"
                style="left: 0px; width: 0px; position: absolute;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-col-4 ant-form-item-label"
      >
        <label
          class=""
          title="InputNumber"
        >
          InputNumber
        </label>
      </div>
      <div
        class="ant-col ant-col-14 ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-input-number ant-input-number-in-form-item ant-input-number-disabled"
            >
              <div
                class="ant-input-number-handler-wrap"
              >
                <span
                  aria-disabled="false"
                  aria-label="Increase Value"
                  class="ant-input-number-handler ant-input-number-handler-up"
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="up"
                    class="anticon anticon-up ant-input-number-handler-up-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="up"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  aria-disabled="false"
                  aria-label="Decrease Value"
                  class="ant-input-number-handler ant-input-number-handler-down"
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-input-number-handler-down-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                class="ant-input-number-input-wrap"
              >
                <input
                  autocomplete="off"
                  class="ant-input-number-input"
                  disabled=""
                  role="spinbutton"
                  step="1"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-col-4 ant-form-item-label"
      >
        <label
          class=""
          title="TextArea"
        >
          TextArea
        </label>
      </div>
      <div
        class="ant-col ant-col-14 ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <textarea
              class="ant-input ant-input-disabled"
              disabled=""
              rows="4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-col-4 ant-form-item-label"
      >
        <label
          class=""
          title="Switch"
        >
          Switch
        </label>
      </div>
      <div
        class="ant-col ant-col-14 ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <button
              aria-checked="false"
              class="ant-switch ant-switch-disabled"
              disabled=""
              role="switch"
              type="button"
            >
              <div
                class="ant-switch-handle"
              />
              <span
                class="ant-switch-inner"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-col-4 ant-form-item-label"
      >
        <label
          class=""
          title="Upload"
        >
          Upload
        </label>
      </div>
      <div
        class="ant-col ant-col-14 ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <span>
              <div
                class="ant-upload ant-upload-select ant-upload-select-text ant-upload-disabled"
                style="display: none;"
              >
                <span
                  class="ant-upload ant-upload-disabled"
                  role="button"
                >
                  <input
                    accept=""
                    style="display: none;"
                    type="file"
                  />
                </span>
              </div>
              <div
                class="ant-upload-list ant-upload-list-text"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-col-4 ant-form-item-label"
      >
        <label
          class=""
          title="Button"
        >
          Button
        </label>
      </div>
      <div
        class="ant-col ant-col-14 ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <button
              class="ant-btn ant-btn-default"
              disabled=""
              type="button"
            >
              <span>
                Button
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form rtl render component should be rendered correctly in RTL direction 1`] = `
<form
  class="ant-form ant-form-horizontal ant-form-rtl"
/>
`;

exports[`Form rtl render component should be rendered correctly in RTL direction 2`] = `
<div
  class="ant-form-item"
>
  <div
    class="ant-row ant-row-rtl ant-form-item-row"
  >
    <div
      class="ant-col ant-form-item-control ant-col-rtl"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        />
      </div>
    </div>
  </div>
</div>
`;
